fixed page horizontal scroll

--- a/main.css
+++ b/main.css
@@ -1,6 +1,10 @@
 body, .container-fluid{
-    margin: 0px;
-    padding: 0px;
+    margin: 0px !important;
+    padding: 0px !important;
+}
+.row{
+    margin-left: 0px !important;
+    margin-right: 0px !important;
 }
 
 /* header section */
